After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726574 - gbinding: warn on failed value transformation
gbinding: warn on failed value transformation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gobject
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-03-17 19:12 UTC by Dan Winship
Modified: 2014-03-17 21:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gbinding: warn on failed value transformation (2.82 KB, patch)
2014-03-17 19:12 UTC, Dan Winship
committed Details | Review

Description Dan Winship 2014-03-17 19:12:27 UTC
GBinding warned if g_value_transform() returns FALSE, but it didn't
warn if there was no transformation available at all. Fix that and
test it.
Comment 1 Dan Winship 2014-03-17 19:12:28 UTC
Created attachment 272198 [details] [review]
gbinding: warn on failed value transformation
Comment 2 Emmanuele Bassi (:ebassi) 2014-03-17 19:20:46 UTC
Review of attachment 272198 [details] [review]:

looks good to me.

I can only see a potential future issue: at some point we may have a default transformation for double → boolean, in which case the test would fail. definitely not a blocker for me.
Comment 3 Dan Winship 2014-03-17 21:43:28 UTC
Attachment 272198 [details] pushed as d8c14f1 - gbinding: warn on failed value transformation